--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://lsky.939593.xyz:11111/thumbnails/b72467caac4cc8555b16946a51e89e7e.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>收藏从未停止，观影从未开始</title>
   </head>
