refactor(web): 移除 React 相关代码并调整 ESLint 配置
- 移除了 eslint.config.js 中的 React 配置项
- 将 index.html 中的 main.tsx 改为 main.ts
- 从 package.json 中移除了多个 React 相关的依赖包
- 删除了 devDependencies 中的 @vitejs/plugin-react 和 unplugin-auto-import

--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
 <script defer src="https://log.939593.xyz/script.js" data-website-id="00270fc8-88b1-4ead-87cc-f7c99a2fa3b0"></script>
