feat(web): 更新网站图标链接

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://lsky.939593.xyz:11111/thumbnails/b72467caac4cc8555b16946a51e89e7e.png"
+      href="https://lsky.939593.xyz:11111/Y7bbx9.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>收藏从未停止，观影从未开始</title>
