build(web): 更新依赖包版本
升级 ag-grid 相关依赖包至 34.3.1 版本，同时更新 eslint 和 node 类型定义依赖版本。

--- a/web/index.html
+++ b/web/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://lsky.939593.xyz:11111/Y7bbx9.jpg"
-    />
+    <link rel="icon" type="image/svg+xml" href="https://lsky.939593.xyz:11111/Y7bbx9.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>收藏从未停止，观影从未开始</title>
   </head>
