--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <title>收藏从未停止，观影从未开始</title>
   </head>
 
-  <body style="margin: 0; overflow: hidden;">
+  <body style="margin: 0; overflow: hidden">
     <!-- 工具栏 - 固定顶部 -->
     <div
       id="toolbar"
@@ -41,7 +41,7 @@
       </button>
     </div>
     <!-- 表格容器 - 自适应高度，内部滚动 -->
-    <div id="root" style="height: 100vh; padding-top: 50px; box-sizing: border-box;"></div>
+    <div id="root" style="height: 100vh; padding-top: 50px; box-sizing: border-box"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
